2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* include/help/en/help_propagate_acl.php
	  include/help/es/help_propagate_acl.php: Added help.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/groups/group_list.php: Fixed bug listing
	group hierarchy.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/groups/configure_group.php
	  include/functions_tags.php
	  operation/events/events.build_query.php
	  operation/events/events.build_table.php: Fixed ACL propagation + Tags. 
	Tickets #1079 and #1072.

2014-08-22  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* pandoradb.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql: Fixed the id column in an
	alert command insertion.

2014-08-22  Junichi Satoh  <junichi@rworks.jp>

	* mobile/operation/events.php: Fixed present event filter loading
	failure.

2014-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_networkmap.php,
	  operation/agentes/networkmap.dinamic.php,
	  operation/agentes/networkmap.php: Renamed some text
	from 'dinamic' to 'dynamic'.

2014-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* images/radial_dynamic_network_icon.png: Added file.
	
	* operation/agentes/networkmap.php: Changed the icon
	of the 'radial dinamic' tab.

2014-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Added filters to the
	function "graph_monitor_wheel".
	
	* operation/agentes/networkmap.dinamic.php,
	  operation/agentes/networkmap.php,
	  include/functions_networkmap.php: Added the 'radial
	dinamic' type.

2014-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Improved the function
	"graph_monitor_wheel" to remove the html encoding.
	
	* include/graphs/pandora.d3.js: Mayor improvements
	on the function "solarburst".

2014-08-21  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Added a function to add an event comment.
